--- a/templates/index.html
+++ b/templates/index.html
@@ -58,7 +58,8 @@
 
       <section class="jumbotron text-center">
         <div class="container">
-          <h1 class="jumbotron-heading">Assalamualaikum</h1>
+
+          <h1 class="jumbotron-heading">Assalamualaikum {{ name }}</h1>
           <p class="lead text-muted">Disini anda akan menemukan berbagai karya tulisan seputar keislaman, meliputi nahwu, fiqh, shorof yang semuanya menarik untuk disimak</p>
           <p>
             <a href="#" class="btn btn-primary my-2">Main call to action</a>
