--- a/templates/archive.html
+++ b/templates/archive.html
@@ -10,20 +10,10 @@ Artikel Islami - {{ request.path.split("/")[2] }}
 
 {% block content %}
 
-{% set page = request.path.split('/')[2] %}
+{% set page = request.path.split('/')[4] %}
+{% set jenis = request.path.split('/')[1] %}
+{% set name = request.path.split('/')[2] %}
 
-{% if request.path == '/' %}
-<section class="jumbotron text-center">
-  <div class="container">
-    <h1 class="jumbotron-heading">Assalamualaikum</h1>
-    <p class="lead text-muted">Disini anda akan menemukan berbagai karya tulisan seputar keislaman, meliputi nahwu, fiqh, shorof yang semuanya menarik untuk disimak</p>
-    <p>
-      <a href="#" class="btn btn-primary my-2">Main call to action</a>
-      <a href="#" class="btn btn-secondary my-2">Secondary action</a>
-    </p>
-  </div>
-</section>
-{% endif %}
 
 <div class="album py-5 bg-light">
   <div class="container">
@@ -58,10 +48,10 @@ Artikel Islami - {{ request.path.split("/")[2] }}
     </div>
 
     <hr/>
-     {% if request.path.split('/')[1] == 'page' or request.path == '/' %}
+
       <nav aria-label="Page navigation example">
         <ul class="pagination justify-content-center">
-          {% if page == '1' or request.path == '/' %}
+          {% if page == '1' or request.path.split('/')[3] == '' %}
             <li class="page-item disabled">
               <a class="page-link" href="#">Previous</a>
           {% else %}
@@ -78,11 +68,11 @@ Artikel Islami - {{ request.path.split("/")[2] }}
               <li class="page-item">
             {% endif %}
 
-                <a class="page-link" href="{{ url_for('index', i=(jml_page+1)) }}">{{ (jml_page+1) }}</a>
+                <a class="page-link" href="{{ url_for('archive', jenis=jenis, name=name, i=(jml_page+1)) }}">{{ (jml_page+1) }}</a>
             </li>
           {% endfor %}
 
-          {% if page == jml_page|string or request.path == '/'%}
+          {% if page == jml_page|string or request.path.split('/')[3] == '' %}
             <li class="page-item disabled">
               <a class="page-link" href="#">Next</a>
           {% else %}
@@ -93,7 +83,7 @@ Artikel Islami - {{ request.path.split("/")[2] }}
           </li>
         </ul>
       </nav>
-      {% endif %}
+
 
   </div>
 </div>
