--- a/templates/single.html
+++ b/templates/single.html
@@ -26,15 +26,27 @@
             {{ article[1]|safe }}
               <p class="blog-post-meta">Kategori <a href="{{ url_for('archive', jenis='cat', name=article[5]) }}">{{ article[4] }}</a></p>
           </div><!-- /.blog-post -->
-            <hr/>
+          <hr/>
           <nav class="blog-pagination">
-            <a class="btn btn-outline-primary" href="#">Older</a>
-            <a class="btn btn-outline-secondary disabled" href="#">Newer</a>
+            {% if previous[7] is defined %}
+              {% set prev_disable = '' %}
+            {% else %}
+              {% set prev_disable = 'disabled' %}
+            {% endif %}
+
+            {% if next[7] is defined %}
+              {% set next_disable = '' %}
+            {% else %}
+              {% set next_disable = 'disabled' %}
+            {% endif %}
+
+            <a class="btn btn-outline-primary {{ prev_disable }}" href="{{ url_for('single', slug=previous[7]) }}">Older</a>
+            <a class="btn btn-outline-secondary {{ next_disable }}" href="{{ url_for('single', slug=next[7]) }}">Newer</a>
           </nav>
 
         </div><!-- /.blog-main -->
 
-<!--        <aside class="col-md-4 blog-sidebar">-->
+        <aside class="col-md-4 blog-sidebar">
 <!--          <div class="p-3 mb-3 bg-light rounded">-->
 <!--            <h4 class="font-italic">About</h4>-->
 <!--            <p class="mb-0">Etiam porta <em>sem malesuada magna</em> mollis euismod. Cras mattis consectetur purus sit amet fermentum. Aenean lacinia bibendum nulla sed consectetur.</p>-->
@@ -47,13 +59,48 @@
 <!--            </ol>-->
 <!--          </div>-->
 
+          <div class="card" style="width: 18rem;">
+            <div class="card-header">
+              <h3 class="card-title">Categories</h3>
+            </div>
+            <ul class="list-group list-group-flush">
+              {% for category in categories %}
+              <li class="list-group-item"><a href="{{ url_for('archive', jenis='cat', name=category['slug']) }}">{{ category['nama_kategori'] }}</a></li>
+              {% endfor %}
+            </ul>
+          </div>
+          <br />
+
+          <div class="card" style="width: 18rem;">
+            <div class="card-header">
+              <h3 class="card-title">Recent Posts</h3>
+            </div>
+            <ul class="list-group list-group-flush">
+              {% for recent in recent_posts %}
+              <li class="list-group-item"><a href="{{ url_for('single', slug=recent['post_slug']) }}">{{ recent['post_title'] }}</a></li>
+              {% endfor %}
+            </ul>
+          </div>
+
+          <br/>
+          <div class="card" style="width: 18rem;">
+            <div class="card-header">
+              <h3 class="card-title">Related Posts</h3>
+            </div>
+            <ul class="list-group list-group-flush">
+              {% for related in related_posts %}
+              <li class="list-group-item"><a href="{{ url_for('single', slug=related['post_slug']) }}">{{ related['post_title'] }}</a></li>
+              {% endfor %}
+            </ul>
+          </div>
+
 <!--          <div class="p-3">-->
 <!--            <h4 class="font-italic">Elsewhere</h4>-->
 <!--            <ol class="list-unstyled">-->
 <!--              <li><a href="#">Facebook</a></li>-->
 <!--            </ol>-->
 <!--          </div>-->
-<!--        </aside>-->
+        </aside>
 
 
       </div>
