--- a/templates/base.html
+++ b/templates/base.html
@@ -2,9 +2,17 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Blog Islam - Membahas seputar isu terkini tentang dunia islam">
     <meta name="author" content="">
+
+    <meta name='robots' content='max-image-preview:large' />
+    <meta name="robots" content="index, follow" />
+    <meta property="og:title" content="Blog Islam" />
+    <meta property="og:description" content="Membahas seputar isu terkini tentang dunia islam" />
+    <meta property="og:url" content="https://www.islam.bungadiva.com" />
+
+    <link rel="canonical" href="https://islam.bungadiva.com/" />
     <link rel="icon" href="{{ url_for('static', filename='images/favicon.ico') }}">
 
     <title>
