--- a/templates/base.html
+++ b/templates/base.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Blog Islam - Membahas seputar isu terkini tentang dunia islam">
-    <meta name="author" content="">
+    <meta name="author" content="choirul ihwan">
 
     <meta name='robots' content='max-image-preview:large' />
     <meta name="robots" content="index, follow" />
